added another function

--- a/index.html
+++ b/index.html
@@ -10,13 +10,25 @@
 
 <body>
 
-    <div id="container">
-        <h3 id="show">Show</h3>
-        <button id="btnShow">Press</button>
+    <section class="comedy-section">
+        <div id="comedy-container"></div>
+        <h3 id="showShowComedy">Show Comedy</h3>
+        <button id="btnComedy">Press</button>
+        <span id="showName"></span>
         <img id="showImg">
         <p id="description"></p>
-        <script src="app.js"></script>
-    </div>
+        </div>
+    </section>
+
+    <section class="horror-section">
+        <div id="horror-container">
+            <h3 id="showHorror">Show Horror</h3>
+            <button id="btnShowHorror">Press</button>
+        </div>
+    </section>
+
+
+    <script src="app.js"></script>
 </body>
 
 </html>
